--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ index.html
 </head>
 
 <a 
-  href="https://wa.me/+12022978992" 
+  href="https://wa.me/012022978992" 
   target="_blank"
   class="whatsapp-float"
   aria-label="Chat on WhatsApp"
