--- a/courses.html
+++ b/courses.html
@@ -7,6 +7,34 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
+<a 
+  href="https://wa.me/012022978992" 
+  target="_blank"
+  class="whatsapp-float"
+  aria-label="Chat on WhatsApp"
+>
+  💬
+</a>
+<style>
+.whatsapp-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #25D366;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  text-decoration: none;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  z-index: 999;
+}
+</style>
+
 <body>
 
   <!-- TOP BAR -->
