--- a/upcoming-classes.html
+++ b/upcoming-classes.html
@@ -9,32 +9,136 @@ upcoming-classes.html
   <title>Upcoming Classes | CIEL Professionals</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<a 
-  href="https://wa.me/012022978992" 
+<!-- WhatsApp Floating Button (USA number + prefilled message + tooltip + responsive + pulse + icon) -->
+<a
+  href="https://wa.me/12022978992?text=Hi%20CIEL%20Professionals%2C%20I%27d%20like%20to%20get%20more%20information."
   target="_blank"
+  rel="noopener noreferrer"
   class="whatsapp-float"
   aria-label="Chat on WhatsApp"
 >
-  💬
+  <!-- Official WhatsApp icon (inline SVG) -->
+  <svg class="whatsapp-icon" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
+    <path fill="currentColor" d="M19.11 17.39c-.27-.14-1.58-.78-1.83-.87-.25-.09-.43-.14-.61.14-.18.27-.7.87-.86 1.05-.16.18-.32.2-.59.07-.27-.14-1.15-.43-2.19-1.36-.81-.72-1.36-1.61-1.52-1.88-.16-.27-.02-.42.12-.56.12-.12.27-.32.41-.48.14-.16.18-.27.27-.45.09-.18.05-.34-.02-.48-.07-.14-.61-1.48-.84-2.03-.22-.52-.45-.45-.61-.46h-.52c-.18 0-.48.07-.73.34-.25.27-.95.93-.95 2.27s.98 2.63 1.11 2.82c.14.18 1.93 2.95 4.68 4.13.65.28 1.16.45 1.56.58.66.21 1.26.18 1.73.11.53-.08 1.58-.65 1.8-1.27.22-.62.22-1.15.16-1.27-.07-.12-.25-.2-.52-.34z"/>
+    <path fill="currentColor" d="M26.67 5.33A13.24 13.24 0 0 0 16.02 0C8.86 0 3.05 5.82 3.05 12.98c0 2.28.6 4.51 1.74 6.48L3 32l12.74-3.73a12.9 12.9 0 0 0 6.23 1.59h.01c7.16 0 12.98-5.82 12.98-12.98 0-3.47-1.35-6.73-3.29-9.55zM22 27.65h-.01a10.7 10.7 0 0 1-5.46-1.5l-.39-.23-7.56 2.22 2.02-7.36-.25-.38a10.7 10.7 0 1 1 11.65 7.25z"/>
+  </svg>
+
+  <!-- Tooltip -->
+  <span class="whatsapp-tooltip" role="tooltip">Chat on WhatsApp</span>
 </a>
+
 <style>
-.whatsapp-float {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: #25D366;
-  color: #fff;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 28px;
-  text-decoration: none;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-  z-index: 999;
-}
+  .whatsapp-float {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    width: 60px;
+    height: 60px;
+    border-radius: 999px;
+    background: #25d366;
+    color: #fff;
+    display: grid;
+    place-items: center;
+    text-decoration: none;
+    box-shadow: 0 8px 18px rgba(0, 0, 0, 0.25);
+    z-index: 999;
+    transform: translateZ(0);
+    transition: transform 180ms ease, box-shadow 180ms ease, filter 180ms ease;
+    animation: whatsapp-pulse 1.8s infinite;
+  }
+
+  .whatsapp-float:hover {
+    transform: scale(1.05);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.32);
+    filter: brightness(1.03);
+    animation-play-state: paused; /* pause pulse on hover */
+  }
+
+  .whatsapp-float:focus-visible {
+    outline: 3px solid rgba(37, 211, 102, 0.45);
+    outline-offset: 4px;
+  }
+
+  .whatsapp-icon {
+    width: 30px;
+    height: 30px;
+    display: block;
+  }
+
+  /* Tooltip */
+  .whatsapp-tooltip {
+    position: absolute;
+    right: 72px;
+    bottom: 50%;
+    transform: translateY(50%) translateX(6px);
+    background: rgba(0, 0, 0, 0.85);
+    color: #fff;
+    padding: 8px 10px;
+    border-radius: 10px;
+    font-size: 13px;
+    line-height: 1;
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 160ms ease, transform 160ms ease;
+  }
+
+  .whatsapp-tooltip::after {
+    content: "";
+    position: absolute;
+    right: -6px;
+    top: 50%;
+    transform: translateY(-50%);
+    border-width: 6px;
+    border-style: solid;
+    border-color: transparent transparent transparent rgba(0, 0, 0, 0.85);
+  }
+
+  .whatsapp-float:hover .whatsapp-tooltip,
+  .whatsapp-float:focus-visible .whatsapp-tooltip {
+    opacity: 1;
+    transform: translateY(50%) translateX(0);
+  }
+
+  /* Pulse animation */
+  @keyframes whatsapp-pulse {
+    0% {
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.25), 0 0 0 0 rgba(37, 211, 102, 0.45);
+    }
+    70% {
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.25), 0 0 0 16px rgba(37, 211, 102, 0);
+    }
+    100% {
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.25), 0 0 0 0 rgba(37, 211, 102, 0);
+    }
+  }
+
+  /* Mobile optimization */
+  @media (max-width: 480px) {
+    .whatsapp-float {
+      width: 54px;
+      height: 54px;
+      right: 14px;
+      bottom: 14px;
+    }
+    .whatsapp-icon {
+      width: 28px;
+      height: 28px;
+    }
+    .whatsapp-tooltip {
+      right: 64px;
+      font-size: 12px;
+      padding: 7px 9px;
+    }
+  }
+
+  /* Respect users who prefer reduced motion */
+  @media (prefers-reduced-motion: reduce) {
+    .whatsapp-float {
+      animation: none;
+      transition: none;
+    }
+  }
 </style>
 <body>
 
