--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@ index.html
   }
 </style>
 
+<meta name="description" content="CIEL Professionals offers PMP, CBAP, Primavera P6, Power BI, Data Analytics, Cybersecurity and professional certification training in Nigeria and online." />
+<meta name="keywords" content="PMP training Nigeria, CBAP training, Primavera P6 course, Power BI training, Data Analytics Nigeria, Cybersecurity training" />
+<meta name="author" content="CIEL Professionals" />
 
 <body>
 
